--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1"
+    />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Little Pigs - The Adventure " />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <link rel="stylesheet" href="https://use.typekit.net/lzl2krg.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gochi+Hand&amp;family=Quicksand:wght@500;700&amp;display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
